--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,19 @@
 version: "3.8"
 
 services:
+  app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    restart: unless-stopped
+    ports:
+      - "8000:80"
+    environment:
+      APP_ENV: production
+      APP_DEBUG: "false"
+    volumes:
+      - ./storage:/var/www/html/storage
+
   postgres:
     image: postgres:16
     restart: unless-stopped
